compiler/tools/fpp-format/test/component.ref.txt
fpp-format
[ local path prefix ]/compiler/tools/fpp-format/test/component.fpp:14.25
  param P: U32 external default 0 id 0x00 set opcode 0x01 save opcode 0x02
                        ^
error: } expected
